# command_module

./: .gitattributes  .gitignore  .gitmodules  README.md
.github/workflows/: build-BITSv5-test.yml  build-BITSv5.yml  build-NotXbeeJoint.yml
Analysis/: Values.m  Weight.m
Boards/APRS/: APRS_Board.kicad_prl  APRS_Board.kicad_pro  APRS_Board.kicad_sch  fp-info-cache
Boards/BITS/: bits.b#1  bits.b#2  bits.b#3  bits.b#4  bits.b#5  bits.brd  bits.s#1  bits.s#2  bits.s#3  bits.s#4  bits.s#5  bits.s#7  bits.sch  bitsClassic.b#1  bitsClassic.b#2  bitsClassic.b#3  bitsClassic.b#4  bitsClassic.b#5  bitsClassic.brd  bitsClassic.s#2  bitsClassic.s#3  bitsClassic.s#4  bitsClassic.sch  bitsClassicEdit.b##  bitsClassicEdit.b#1  bitsClassicEdit.b#2  bitsClassicEdit.b#3  bitsClassicEdit.b#4  bitsClassicEdit.b#5  bitsClassicEdit.b#6  bitsClassicEdit.b#7  bitsClassicEdit.b#8  bitsClassicEdit.b#9  bitsClassicEdit.brd  bitsClassicEdit.s#1  bitsClassicEdit.s#2  bitsClassicEdit.sch
Boards/BITS3.2/: bits3.2.b##  bits3.2.b#5  bits3.2.b#8  bits3.2.b#9  bits3.2.brd  bits3.2.s#5  bits3.2.s#9  bits3.2.sch  bits3.2.step  template_2_layer.cam
Boards/BITSv4/: BITSv4-eagle-import.kicad_sym  BITSv4.brd  BITSv4.kicad_pcb  BITSv4.kicad_prl  BITSv4.kicad_pro  BITSv4.kicad_sch  BITSv4.sch  fp-lib-table  readme.txt
Boards/BITSv5/: BOM.xlsx
Boards/CellTracker_v3.2/: cell.b##  cell.b#1  cell.b#2  cell.b#3  cell.b#5  cell.b#6  cell.b#7  cell.b#9  cell.brd  cell.s##  cell.s#1  cell.s#2  cell.s#3  cell.s#4  cell.s#5  cell.s#6  cell.s#7  cell.s#9  cell.sch  cell_3.2.b##  cell_3.2.b#9  cell_3.2.brd  cell_3.2.s#9  cell_3.2.sch  cell_3.2.step
Boards/Cell_Tracker/: .cell.brd.lck  Values.asv  Values.m  cell.b#1  cell.b#2  cell.b#3  cell.b#4  cell.b#5  cell.b#6  cell.b#7  cell.b#8  cell.b#9  cell.brd  cell.s#1  cell.s#2  cell.s#3  cell.s#5  cell.s#6  cell.s#7  cell.s#8  cell.s#9  cell.sch
Boards/LM20242/: test_reg.brd  test_reg.sch
Boards/LMR50410_reg/: new_reg.s#9  new_reg.sch
Boards/LVC/: lvc.b#1  lvc.brd  lvc.s#1  lvc.sch
Boards/LVC_v2/: lvc_v2.b#9  lvc_v2.brd  lvc_v2.s#9  lvc_v2.sch
Boards/Test_Regulator/: HASP.lbr  Test_Reg.brd  Test_Reg.sch  Values.m
Boards/bored_cad/: 559320230.stp  C0603.step  C1206.step  C1210.step  R0603.step  RESC0603X26.step  SOIC127P600X170-9T256X345N.step  Teensy3_1.stp  teensy_3_1_stp_1.mtl
Boards/libr/: Adafruit Feather M0 RFMxx.lbr  NOPB.l#1  NOPB.lbr  NR_connectors.l#1  NR_connectors.l#2  NR_connectors.l#3  NR_connectors.lbr  Teensy_3_and_LC_Series_Boards_v1.4.lbr  Tracksoar v2 .lbr  cmdLibs.l#1  cmdLibs.l#2  cmdLibs.l#3  cmdLibs.l#4  cmdLibs.l#5  cmdLibs.lbr  inductors.l#1  inductors.l#2  inductors.l#3  inductors.l#4  inductors.l#5  inductors.lbr  jmolterLib.l#1  jmolterLib.l#2  jmolterLib.l#3  jmolterLib.l#4  jmolterLib.l#5  jmolterLib.l#6  jmolterLib.l#7  jmolterLib.l#8  jmolterLib.l#9  jmolterLib.lbr  maxstream.lbr  ubloxLib.lbr
CAD/: AseemSecondBox.prt  Command_Module.prt  secondaryBox.prt  teriarybox_plate.prt  tertiarybox.prt  tertiaryboxAsem.prt  tertiarybox_lid.prt
CAD/Box/: cell_box.prt  cell_box_half.prt  cell_eps_antenna.prt  cell_eps_standard.prt  cell_eps_switch.prt  iridium_box.prt  iridium_box_half.prt  iridium_switch_eps.prt  standard_eps.prt
CAD/Box_DEP/: Command_Module.prt  cell_box_half.prt  cell_eps_standard.prt  iridium_antenna_eps.prt  iridium_box.prt  iridium_box_half.prt  iridium_switch_eps.prt
CAD/Box_v3/: teriarybox_plate_bitsv2.prt  tertiarybox.prt  tertiaryboxAsem.prt  tertiarybox_lid.prt
CAD/Box_v4/: boxAssemv4.prt  boxLidv4.prt  boxPlatev4.prt  box_v4.prt
CAD/Electronics/: 0.2F.prt  1.575GHz.prt  10 uF.prt  1053071202.stp  1053071202_stp.prt  1053111202.stp  1053111202_stp.prt  10x Pinheader Male.prt  132119_3d_model.stp  132119_3d_model_stp.prt  132123_3d_model_file.stp  132123_3d_model_file_stp.prt  132141_3d_model.igs  132141_3d_model_igs.prt  2.2 uF.prt  22.prt  470.prt  473521001_microSD.stp  53261-04.prt  53261-04_id515_obj.prt  53398-10.prt  533981071.stp  533981071_stp.prt  732511150_stp.prt  901_10460_3d_model_file.igs  901_10460_3d_model_file_igs.prt  ABRACON_id355_obj.prt  ASPI-6045S-560M-TCT-ND.prt  AseemSecondBoxv2.prt  BITS.prt  BITS_stackup.prt  Board_id19_obj.prt  Body2C10_id339_obj.prt  Body2C11_id419_obj.prt  Body2C12_id435_obj.prt  Body2C13_id451_obj.prt  Body2C1_id67_obj.prt  Body2C2_id83_obj.prt  Body2C3_id99_obj.prt  Body2C4_id115_obj.prt  (+98 more)
CAD/Fasteners/: 513820200.stp  513820200_stp.prt  513820400.stp  513820400_stp.prt  559320210_stp.prt  559320430.stp  559320430_stp.prt  8030T160_WEBBING GUIDE.STEP  8030T160_WEBBING GUIDE_step.prt  8860T11 - Rope Guide.prt  8860T810_300 SERIES STAINLESS STEEL ROPE GUIDE.STEP  8860T810_300 SERIES STAINLESS STEEL ROPE GUIDE_step.prt  8876T340_NYLON LOOP CLAMP.STEP  91225A111_PHENOLIC FLAT WASHER.STEP  (+32 more)
Code/BITS/BITSv5/flight/: CMakeLists.txt  clean.zsh  flight copy.cpp  flight.cpp
Code/BITS/BITSv5/gps-test/: CMakeLists.txt  clean.sh  test.cpp
Code/BITS/BITSv5/iridium-test/: CMakeLists.txt  bitsv5-test-project.code-workspace  clean.zsh  test.cpp
Code/BITS/BITSv5/log-test/: CMakeLists.txt  log-test.cpp
Code/BITS/BITSv5/radio-test/: CMakeLists.txt  radio.cpp  radio.h  radio_test.cpp  sx126x-board.cpp  sx126x-board.h  sx126x.cpp  sx126x.h
Code/BITS/BITSv5/radio-test/radio-lib/: RP2040_HAL.cpp  sx126x-board.cpp  sx126x-board.h
Code/BITS/BITSv5/radio-test/radiolib-src/: RP2040Hal.cpp  RP2040Hal.h
Code/BITS/BITSv5/test/: BITSv5.h  CMakeLists.txt  MAX_M10S.h  MS5607.cpp  MS5607.h  SX1262.cpp  SX1262.h  SX126x.cpp  SX126x.h  SparkFun_u-blox_GNSS_Arduino_Library.cpp  SparkFun_u-blox_GNSS_Arduino_Library.h  test.c  test.cpp
Code/BITS/BITSv5/test/src/: LittleFS.h
(+348 files in other folders)
